# ros2_dam

./: LICENSE  README.md
demos/: debug_static_demo.py  static_demo.py  static_demo2.py  static_demo2_collision.py  static_demo3.py
docs/: 01_introduction.md  02_fundamental_concepts.md  03_installation.md  04_my_first_simulation.md  05_my_first_workspace.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/baile_sencillo/lib/baile_sencillo/: movimiento_robot
ros2_ws/install/baile_sencillo/share/baile_sencillo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/baile_sencillo/: setup.cfg  setup.py
ros2_ws/src/baile_sencillo/baile_sencillo/: movimiento_robot.py
ros2_ws/src/press_moveit_ft45_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/press_moveit_ft45_pkg/press_moveit_ft45_pkg/: press_motion_node.py
scripts/: cleanup.sh  gazebo_cleanup.sh  initialize_gazebo_iiwa7.sh  run_mockup.sh  run_moveit_rviz.sh  run_rviz.sh  run_simulation.sh  run_turtlesim.sh  setup_lbr_environment.sh  setup_lbr_visualizer.sh  setup_ros2_environment.sh  setup_workspace.sh  stop_turtlesim.sh  verify_ros2_installation.sh  verify_workspace.sh
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
simulation/: ft45_sensor.xacro  iiwa7_backup.xacro  polishing_tool.xacro
simulation/lbr-stack/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation/lbr-stack/log/: latest_build
(+587 files in other folders)
