<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>press_moveit_ft45_pkg</name>
  <version>0.0.0</version>
  <description>custom package for FT45 sensor to measure effort on inverse kinematics for iiwa7 KUKA R 800 7 joints arm robot</description>
  <maintainer email="pabguifon@gmail.com">pablo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>moveit_ros_move_group</depend>

  <!-- dependencias del moveit y de los xacro para el botardo -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>lbr_bringup</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>iiwa7_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>